# chronoai-symphony

./: Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  WORKFLOW.md  docker-compose.yml
crates/symphony-agent/: Cargo.toml
crates/symphony-agent/src/: approval.rs  approval_handler.rs  lib.rs  process.rs  runner.rs  timeout.rs
crates/symphony-agent/src/protocol/: claude_cli.rs  events.rs  handshake.rs  messages.rs  mod.rs  streaming.rs
crates/symphony-cli/: Cargo.toml
crates/symphony-cli/src/: main.rs
crates/symphony-core/: Cargo.toml
crates/symphony-core/src/: error.rs  identifiers.rs  lib.rs
crates/symphony-core/src/domain/: codex_totals.rs  config.rs  issue.rs  live_session.rs  mod.rs  orchestrator_state.rs  retry_entry.rs  run_attempt.rs  workflow.rs  workspace.rs
crates/symphony-logging/: Cargo.toml
crates/symphony-logging/src/: lib.rs  setup.rs
crates/symphony-orchestrator/: Cargo.toml
crates/symphony-orchestrator/src/: activity_log.rs  approval_queue.rs  cleanup.rs  concurrency.rs  dispatch.rs  events.rs  lib.rs  orchestrator.rs  reconciliation.rs  retry.rs  worker.rs
crates/symphony-server/: Cargo.toml
crates/symphony-server/src/: lib.rs  router.rs
crates/symphony-server/src/api/: approve.rs  issue.rs  mod.rs  refresh.rs  state.rs
crates/symphony-server/src/dashboard/: handler.rs  mod.rs
crates/symphony-tracker/: Cargo.toml
crates/symphony-tracker/src/: lib.rs  traits.rs
crates/symphony-tracker/src/github/: app_token.rs  client.rs  error.rs  mod.rs  normalization.rs
crates/symphony-workflow/: Cargo.toml
crates/symphony-workflow/src/: config.rs  lib.rs  loader.rs  template.rs  validation.rs  watcher.rs
crates/symphony-workspace/: Cargo.toml
crates/symphony-workspace/src/: hooks.rs  lib.rs  manager.rs  safety.rs  sanitizer.rs
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
