[workspace]
resolver = "2"
members = [
    "crates/symphony-cli",
    "crates/symphony-core",
    "crates/symphony-workflow",
    "crates/symphony-tracker",
    "crates/symphony-workspace",
    "crates/symphony-agent",
    "crates/symphony-orchestrator",
    "crates/symphony-server",
    "crates/symphony-logging",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# HTTP
reqwest = { version = "0.13", features = ["json"] }
axum = "0.8"

# Template engine
liquid = "0.26"
liquid-core = "0.26"

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Async trait
async-trait = "0.1"

# Testing
tempfile = "3"
tokio-test = "0.4"

# Internal crates
symphony-core = { path = "crates/symphony-core" }
symphony-workflow = { path = "crates/symphony-workflow" }
symphony-tracker = { path = "crates/symphony-tracker" }
symphony-workspace = { path = "crates/symphony-workspace" }
symphony-agent = { path = "crates/symphony-agent" }
symphony-orchestrator = { path = "crates/symphony-orchestrator" }
symphony-server = { path = "crates/symphony-server" }
symphony-logging = { path = "crates/symphony-logging" }
