[package]
name = "symphony-tracker"
version.workspace = true
edition.workspace = true

[dependencies]
symphony-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
