[package]
name = "symphony-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
symphony-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
liquid = { workspace = true }
liquid-core = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
